[project]
name = "langsam-songs-downloader"
version = "1.0.0"
description = "YouTube to MP3 downloader for family use - By Studio Oscar Since 1931"
requires-python = ">=3.9"
dependencies = [
    "flask>=3.0.0",
    "yt-dlp>=2025.1.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

